--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -34,7 +34,7 @@
 
 body {
   margin: 0;
-  background: var(--background);
+  background: var(--background-body);
   color: var(--text-body);
   padding-left: 63px; // sidebar width
 }
