--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -1,19 +1,31 @@
+@use 'breakpoints' as *;
+
 .sidebar {
-  position: fixed;
   display: flex;
   justify-content: space-between;
-  left: 0;
-  height: 100%;
-  flex-direction: column;
-  border-left: 1px solid var(--border);
-  border-right: 1px solid var(--border);
-  padding: 8px 0 4px;
   background: var(--background-body);
+  border-bottom: 1px solid var(--border);
+  width: 100%;
+  left: 0;
+  top: 0;
+
+  @media (min-width: $breakpoint-sm) {
+    position: fixed;
+    padding: 8px 0 4px;
+    border-left: 1px solid var(--border);
+    border-right: 1px solid var(--border);
+    height: 100%;
+    width: auto;
+    flex-direction: column;
+  }
 }
 
 .sidebar-top {
   display: flex;
-  flex-direction: column;
+
+  @media (min-width: $breakpoint-sm) {
+    flex-direction: column;
+  }
 }
 
 .sidebar-logo {
