--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -14,7 +14,7 @@
   --text-body: #393551;
   --text-header: #222;
   --text-neutral: #444444;
-  --brand-primary: orange;
+  --brand-primary: #5c00dc;
 
   --border: #cbc6de;
   --hover-border: color-mix(in srgb, var(--border), black 40%);
